# hackathon-review

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
api/: requirements.txt
api/app/: config.py  database.py  main.py  models.py  schemas.py
api/app/routes/: hackathons.py  parse_rules.py  results.py  runs.py  static_analysis.py
api/app/services/: log_capture.py  pipeline.py  retry.py  storage.py
src/hackathon_reviewer/: __init__.py  cli.py  config.py  models.py
src/hackathon_reviewer/providers/: anthropic.py  base.py  gemini.py  prompts.py
src/hackathon_reviewer/stages/: clone.py  code_review.py  parse.py  reporting.py  scoring.py  static_analysis.py  video.py  video_analysis.py
src/hackathon_reviewer/utils/: cache_key.py  file_reader.py  git.py  llm_cache.py  video_download.py
web/: README.md  next.config.ts  package-lock.json
web/src/app/: layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/hackathons/[id]/: page.tsx
web/src/app/hackathons/[id]/edit/: page.tsx
web/src/app/hackathons/[id]/flags/: page.tsx
web/src/app/hackathons/[id]/leaderboard/: page.tsx
web/src/app/hackathons/[id]/outreach/: page.tsx
web/src/app/hackathons/[id]/runs/: page.tsx
web/src/app/hackathons/[id]/runs/[runId]/flags/: page.tsx
web/src/app/hackathons/[id]/runs/[runId]/leaderboard/: page.tsx
web/src/app/hackathons/new/: page.tsx
web/src/components/: column-mapper.tsx  editable-url.tsx  hackathon-form.tsx  pipeline-progress.tsx  theme-toggle.tsx
web/src/lib/: api.ts  types.ts
(+1 files in other folders)
